// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GM-token price execute price endpoint errors when fewer than required source EAs respond 1`] = `
{
  "errorMessage": "Missing token metadata for 'WETH' on 'arbitrum'",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`GM-token price execute price endpoint fails when token metadata is missing (resolver → 502) 1`] = `
{
  "errorMessage": "Missing token metadata for 'DOGE' on 'arbitrum'",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`GM-token price execute price endpoint success on Arbitrum (default chain) using resolver decimals 1`] = `
{
  "data": {
    "result": 1.1471768303164502,
    "sources": {
      "LINK": [
        "tiingo",
        "coinmetrics",
        "ncfx",
      ],
      "USDC": [
        "tiingo",
        "coinmetrics",
        "ncfx",
      ],
    },
  },
  "result": 1.1471768303164502,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
